--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Most Powerful Women in the World</h2>
-							<p>Another fine responsive<br />
+							<p>hallo<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions special">
