--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 								These women come from all over the world, they are politcians, musicians, CEOs, <br />
 								presidents and activists. Are all of these women somehow connected? <br />
 								Is there a certain formula that guarantees a woman to become more successful?</p>
+								<br />
 							</header>
 							</ul>
 						</div>
@@ -67,23 +68,26 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Project motivation<br />
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/powerful1.jpg" alt="" /></div><div class="content">
+								<h2>Project motivation<br /> </h2>
+								<p>Each year Forbes creates a list of the smartest and toughest women of that year. Can this list help create a recipe for how to become powerful?
+									The goal of the project is to delve deep into the most powereful women, figure our their most immediate connections using data found online and come up with a recipe to become more powerful.
+							 </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>The data<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>The data<br /> </h2>
+								<p> The world is filled with data and for this project the data could be endless. To limit the scope of the project however the data that will be used is from four sources.
+								First the list of 100 most powerful women of 2019 as well as list of the top 10 most powerful women from 2004-2018 is gathered from the Forbes website. This results in a list of 137 women,
+							since women ofter appear more than once on the list. The website <a href="https://littlesis.org">Little Sis</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Sentiment Analysis<br />
+								<p>To determine if a woman has a positive or negative impact on society sentiment analysis is used. Sentiment analysis is one of the best
+								tools to use </p>
 							</div>
 						</section>
 					</section>
