--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
+		<title>Technical Details - Most powerful women in the world</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="generic.html">Tehnical Details</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
@@ -41,16 +41,18 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Generic Page</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>Technical Details</h2><p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+								<h3>Data Exploration</h3>
+								<p>The data for the project is gathered from three sources. Using the Forbes lists from 2004 to find the most powerful women a list of 153 have been found, since women often appear more than once on the list. The website <a href="https://littlesis.org/lists/2687-the-worlds-most-powerful-women-2019/members">Little Sis</a> is used to gather all the relationship these women have with important organizations. When creating the network for the project each women will be representeed with a node, but nodes also consist of companies, businesses, schools and organizations that a woman has a relationship with. The Little sis data alone results in 1400 nodes in the network. Next, the wikipedia pages for the women are gatherd to gain even more connections, if there are more connections available on the wikipedia page then more nodes are creating. The wikipedia pages resulted in about 12.000 more nodes that were added to the network. The final network therefore consists of around 13.000 nodes and 18.000 edges, where and edge represents a connection between the two nodes.</p>
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+								<p> <b>A simple example</b> of a node is Hillary Clinton who is one of the most powerful women. Hillary Clinton has an obvious connection to Bill Clinton, which means that Bill Clinton has now become a node in the network. An edge has now been created between Hillary and Bill. Since Bill is now a node in the network he will both have connections to women and other non-women nodes. In the network there is a connection between Bill Clinton and Barack Obama, since Barack Obama has been added as a node in relation to Michelle Obama who is one the most powerful women.<p>
+
+
+									Text Analysis will be used in the project and since wikipedia pages often tend to be written quite neutral, it has been decided to gather the twitter feeds of the women as well. Unfortunately, only 58 of the women had a verified twitter account but the gathering of their most recent tweets resulted in 111.000 tweets being gathered.</p>
 
 								<hr />
 
