--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
 						</div>
 					</section>
 
+					<!-- Data -->
+						<section id="one" class="wrapper style3 special">
+							<div class="inner">
+								<header class="major">
+									<h2>Project overview</h2>
+									<p> To get a quick overview of the project please check out this video </p>
+									<video with ='620' height='400' controls>
+										<source src='images/mostpowerful.mp4' type = 'video/mp4'>
+											Your browser does not support the video tag.
+										</video>
+								</header>
+								</ul>
+							</div>
+						</section>
+
 
 				<!-- Project motivation -->
 					<section id="#projectmotivation" class="wrapper alt style2">
@@ -160,45 +175,46 @@
 					<section id="eight" class="wrapper style5 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Word Clouds for the top 6 communities</h2>
-								<p>blablabla....</p>
+								<h2>Communities</h2>
+								<p> The Louvain method for community detection is used to detect communities within the network. 43 communities were found and will the word clouds of the top 6 communities with the biggest number of nodes be listed here below. </p>
 							</header>
 							<ul class="features">
 								<li class="">
 									<center>
  									 <img src="images/com1.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p>The first community, and the biggest, centers around technology and finance. In the community there are around 40 of the most powerful women.
+										  To name a few: Abigail Johnson, Aileen Lee, Amy Hood, Julie Sweet, Lynn Good and Ruth Porat are all in this community. The women have one noticable thing in common, they are successful business women in the financial sector.</p>
 									</li>
 								<li class="">
 									<center>
  									 <img src="images/com2.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p>The second community revolves around the game Tennis. Serena Williams is the only powerful woman in this community which is understandable since there are no other female athletes on the most powerful lists. </p>
 									</li>
 								<li class="">
 									<center>
  									 <img src="images/com3.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p>The third community centers around the music industry. In the community there are 3 powerful women: Beyoncé, Lady Gaga and Rihanna. These women have an obvious connection, they are all famous musicians</p>
 								</li>
 								<li class="">
 									<center>
  									 <img src="images/com4.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p>The fourth community revolves around the entertainment and arts industries. In the word cloud there are words such as Dreamgirls, Presley and Hurston which relate to the industry mentioned. In the community there are three powerful women: Ava Duvernay, Oprah Winfrey and Bonnie Hammer, who all are in the entertainment industry. </p>
 									</li>
 								<li class="">
 									<center>
  									 <img src="images/com5.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p> The fifth community revolves around Great Britain. In the word cloud there are words such as Salmond, Farage and Corbyn who are all politicans in Britain. In the community there are five powerful women: Ana Botin, Judith Mckenna, Kaherine Viener, Nichola Sturgeon, Theresa May who all have in common that they are either of british descent or live and work in Britain.</p>
 									</li>
 								<li class="">
 									<center>
  									 <img src="images/com6.png" alt="" style="width:100%">
  								 <center>
-									 <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+									 <p>The sixth community revolves around Hillary Clinton. In the word cloud there are words that revolve around Hillary directly: Rodham which is her maiden name. Fresnel which is the type of glass used in here eyeglasses since she has a particularly bad vision. Sarin which is a leathal gas that she was accused of approving delivery of to Syrian Rebels.  </p>
 									</li>
 							</ul>
 						</div>
