--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#projectmotivation">Project Motivation</a></li>
 											<li><a href="#">The two networks</a></li>
-											<li><a href="#similarity">Similarity</a></li>
+											<li><a href="#overview">Project Overview</a></li>
 										</ul>
 									</div>
 								</li>
@@ -69,8 +69,8 @@
 						</div>
 					</section>
 
-					<!-- Data -->
-						<section id="one" class="wrapper style3 special">
+					<!-- Project overview -->
+						<section id="#overview" class="wrapper style5 special">
 							<div class="inner">
 								<header class="major">
 									<h2>Project overview</h2>
