--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Data Exploration</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#projectmotivation">Project Motivation</a></li>
+											<li><a href="projectmotivation">Project Motivation</a></li>
 											<li><a href="#">The two networks</a></li>
 											<li><a href="#overview">Project Overview</a></li>
 										</ul>
@@ -86,7 +86,7 @@
 
 
 				<!-- Project motivation -->
-					<section id="#projectmotivation" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/powerful1.jpg" alt="" /></div><div class="content">
 								<h2>Project motivation<br /> </h2>
@@ -181,38 +181,38 @@
 							<ul class="features">
 								<li class="">
 									<center>
- 									 <img src="images/com1.png" alt="" style="width:100%">
+ 									 <img src="images/com1.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p>The first community, and the biggest, centers around technology and finance. In the community there are around 40 of the most powerful women.
 										  To name a few: Abigail Johnson, Aileen Lee, Amy Hood, Julie Sweet, Lynn Good and Ruth Porat are all in this community. The women have one noticable thing in common, they are successful business women in the financial sector.</p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com2.png" alt="" style="width:100%">
+ 									 <img src="images/com2.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p>The second community revolves around the game Tennis. Serena Williams is the only powerful woman in this community which is understandable since there are no other female athletes on the most powerful lists. </p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com3.png" alt="" style="width:100%">
+ 									 <img src="images/com3.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p>The third community centers around the music industry. In the community there are 3 powerful women: Beyoncé, Lady Gaga and Rihanna. These women have an obvious connection, they are all famous musicians</p>
 								</li>
 								<li class="">
 									<center>
- 									 <img src="images/com4.png" alt="" style="width:100%">
+ 									 <img src="images/com4.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p>The fourth community revolves around the entertainment and arts industries. In the word cloud there are words such as Dreamgirls, Presley and Hurston which relate to the industry mentioned. In the community there are three powerful women: Ava Duvernay, Oprah Winfrey and Bonnie Hammer, who all are in the entertainment industry. </p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com5.png" alt="" style="width:100%">
+ 									 <img src="images/com5.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p> The fifth community revolves around Great Britain. In the word cloud there are words such as Salmond, Farage and Corbyn who are all politicans in Britain. In the community there are five powerful women: Ana Botin, Judith Mckenna, Kaherine Viener, Nichola Sturgeon, Theresa May who all have in common that they are either of british descent or live and work in Britain.</p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com6.png" alt="" style="width:100%">
+ 									 <img src="images/com6.jpeg" alt="" style="width:100%">
  								 <center>
 									 <p>The sixth community revolves around Hillary Clinton. In the word cloud there are words that revolve around Hillary directly: Rodham which is her maiden name. Fresnel which is the type of glass used in here eyeglasses since she has a particularly bad vision. Sarin which is a leathal gas that she was accused of approving delivery of to Syrian Rebels.  </p>
 									</li>
