Website and notebook changes (Erla)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Home</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -58,9 +58,9 @@
 					<section id="#one" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Forbes most powerful women</h2>
+								<h2>Forbes Most Powerful Women</h2>
 								<p>Each year Forbes creates a list of the top 100 most powerful women.<br />
-								These women come from all over the world, they are politcians, musicians, CEOs, <br />
+								These women come from all around the world; they are politcians, musicians, CEOs, <br />
 								presidents and activists. Are all of these women somehow connected? <br />
 								Is there a certain formula that guarantees a woman to become more successful?</p>
 								<br />
@@ -74,9 +74,11 @@
 							<div class="inner">
 								<header class="major">
 									<h2>Project overview</h2>
-									<p> To get a quick overview of the project please check out this video </p>
+									<p> This is the the final project of the course Social Graphs and Interactions, taught at DTU in the fall of 2020. <br>
+									    It is all about the network of the world's most powerful women. <br>
+									    To get a quick overview of the project, please check out this introduction video below. </p>
 									<video with ='620' height='400' controls>
-										<source src='images/mostpowerful.mp4' type = 'video/mp4'>
+										<source src='Most powerful women.mp4' type = 'video/mp4'>
 											Your browser does not support the video tag.
 										</video>
 								</header>
@@ -90,8 +92,10 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/powerful1.jpg" alt="" /></div><div class="content">
 								<h2>Project motivation<br /> </h2>
-								<p>The goal of the project is to delve deep into the most powerful women, figure our their most immediate connections using data found online and come up with a recipe to become more powerful. Do the most powerful women in the world have something in common?
-							 </p>
+								<p>The goal of this project is to delve deep into the most powerful women of the world by figuring out their most 
+								   immediate connections, using data found online, and trying to come up with a recipe to become more powerful. 
+								   Do these women have something in common?
+							 	</p>
 							</div>
 						</section>
 
@@ -148,6 +152,9 @@
 							<header class="major">
 								<h2 style='color:#87947f'>The connection between the women</h2>
 								<p style='color:#87947f'>blabla....</a> </p>
+								<center>
+									<img src="images/women_network.png" alt="" style="width:95%">
+								<center>
 								<br />
 					</section>
 
@@ -181,38 +188,38 @@
 							<ul class="features">
 								<li class="">
 									<center>
- 									 <img src="images/com1.jpeg" alt="" style="width:100%">
+ 									 <img src="images/tech_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p>The first community, and the biggest, centers around technology and finance. In the community there are around 40 of the most powerful women.
 										  To name a few: Abigail Johnson, Aileen Lee, Amy Hood, Julie Sweet, Lynn Good and Ruth Porat are all in this community. The women have one noticable thing in common, they are successful business women in the financial sector.</p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com2.jpeg" alt="" style="width:100%">
+ 									 <img src="images/tennis_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p>The second community revolves around the game Tennis. Serena Williams is the only powerful woman in this community which is understandable since there are no other female athletes on the most powerful lists. </p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com3.jpeg" alt="" style="width:100%">
+ 									 <img src="images/music_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p>The third community centers around the music industry. In the community there are 3 powerful women: Beyoncé, Lady Gaga and Rihanna. These women have an obvious connection, they are all famous musicians</p>
 								</li>
 								<li class="">
 									<center>
- 									 <img src="images/com4.jpeg" alt="" style="width:100%">
+ 									 <img src="images/veitiggi_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p>The fourth community revolves around the entertainment and arts industries. In the word cloud there are words such as Dreamgirls, Presley and Hurston which relate to the industry mentioned. In the community there are three powerful women: Ava Duvernay, Oprah Winfrey and Bonnie Hammer, who all are in the entertainment industry. </p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com5.jpeg" alt="" style="width:100%">
+ 									 <img src="images/veitiggi2_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p> The fifth community revolves around Great Britain. In the word cloud there are words such as Salmond, Farage and Corbyn who are all politicans in Britain. In the community there are five powerful women: Ana Botin, Judith Mckenna, Kaherine Viener, Nichola Sturgeon, Theresa May who all have in common that they are either of british descent or live and work in Britain.</p>
 									</li>
 								<li class="">
 									<center>
- 									 <img src="images/com6.jpeg" alt="" style="width:100%">
+ 									 <img src="images/skritid_wordcloud.JPG" alt="" style="width:100%">
  								 <center>
 									 <p>The sixth community revolves around Hillary Clinton. In the word cloud there are words that revolve around Hillary directly: Rodham which is her maiden name. Fresnel which is the type of glass used in here eyeglasses since she has a particularly bad vision. Sarin which is a leathal gas that she was accused of approving delivery of to Syrian Rebels.  </p>
 									</li>
